--- a/config/recipes/templates/nginx_unicorn.erb
+++ b/config/recipes/templates/nginx_unicorn.erb
@@ -24,4 +24,6 @@ server {
   error_page 500 502 503 504 /500.html;
   client_max_body_size 4G;
   keepalive_timeout 10;
+  proxy_read_timeout 300;
+  proxy_connect_timeout 300;
 }
