--- a/app/views/searches/wine.html.erb
+++ b/app/views/searches/wine.html.erb
@@ -56,10 +56,11 @@
       <% end %>
       <div class="wine_list">
         <% @wines.each do |wine| %>
+          <% releast_detail = wine.details.order("year desc").first  %>
+          <% next unless releast_detail %>
           <div class="box590">
             <div class="box590_t"></div>
             <div class="box590_main">
-              <% releast_detail = wine.details.order("year desc").first  %>
               <%= link_to wine_path(releast_detail) do %>
                 <%= wine_label_tag(wine, :alt => releast_detail.origin_zh_name, :thumb_name => "thumb_x", :size => "70x70" )%>
               <% end %>
