--- a/app/views/users/share/_recommend_users.html.erb
+++ b/app/views/users/share/_recommend_users.html.erb
@@ -13,7 +13,7 @@
       <span class="location">上海</span>
     </p>
      <p class="statu">
-       <% if current_user.id != user.id %>
+       <% if current_user != user %>
           <%= link_to follow_user_path(user), :class => :btn_gray, :method => :put do %>
            <span>加关注</span>
           <% end %>
