--- a/app/views/users/share/_user_followers.html.erb
+++ b/app/views/users/share/_user_followers.html.erb
@@ -24,7 +24,7 @@
     </p>
     <% else %>
     <p> 
-      <% if current_user.id != user.id %>
+      <% if current_user != user %>
          <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
              <span>加关注</span>
          <% end %>   
