my home page navigation modify

--- a/public/template/myhp_winery_list.html
+++ b/public/template/myhp_winery_list.html
@@ -53,15 +53,14 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
                 <ul class="hp_navi">
                     <li><a href="cellar.html">12<br/>藏酒</a></li>
-                    <li><a href="myhp_wine_list.html">12<br/>
-                    关注的酒</a></li>
-                    <li class="current"><a href="myhp_winery_list.html">12<br/>
-                    关注的酒庄</a></li>
+                    <li><a href="myhp_follower_list.html">12<br/>
+                    粉丝</a></li>
+                    <li class="current"><a href="myhp_wine_list.html">12<br/>
+                    关注</a></li>
                     <li><a href="myhp_comment_list.html">12<br/>评论</a></li>
-                    <li><a href="#">12<br/>品酒辞</a></li>
-                    <li><a href="myhp_following_list.html">12<br/>关注的人</a></li>
-                    <li><a href="myhp_follower_list.html">12<br/>粉丝</a></li>
                     <li><a href="album.html">12<br/>相册</a></li>
+                    <li><a href="myevent.html">12<br/>活动</a></li>
+                    <li><a href="myhp_collect_list.html">12<br/>收藏</a></li>
                 </ul>
                 <div class="clear"></div>
             </div>
@@ -69,7 +68,14 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
           </div>
           <div class="content">
           	<div class="left">
-            	<div class="title_btn">
+            	<div class="tabs3">
+                  <ul>
+                    <li><a href="myhp_wine_list.html">关注的酒</a></li>
+                    <li class="current"><a href="myhp_winery_list.html">关注的酒庄</a></li>
+                    <li><a href="myhp_following_list.html">关注的人</a></li>
+                  </ul>
+                </div>
+                <div class="title_btn">
                   <h1>关注的酒庄 <span class="font12 more">(共10个...)</span></h1>
                 </div>
                 <ul class="winery_list">
