--- a/public/template/myhp_notes_list2.html
+++ b/public/template/myhp_notes_list2.html
@@ -79,7 +79,9 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 </div>
                 <ul class="notes_list">
                         	<li class="clearfix">
-                            	<a href="wine_profile.html"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
+                            	<div class="pic">
+                                <a href="wine_profile.html"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
+                                </div>
                                 <div class="info">
                                	    <span class="date  float_r">2012-11-06</span>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a></h3>
@@ -91,7 +93,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                 <div class="clear"></div>
                             </li>
                             <li class="clearfix">
-                            	<a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a>
+                            	<div class="pic"><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></div>
                                 <div class="info">
                                	    <span class="date  float_r">2012-11-06</span>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a></h3>
@@ -103,7 +105,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                               <div class="clear"></div>
                           </li>
                           <li class="clearfix">
-                            	<a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a>
+                            	<div class="pic"><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></div>
                                 <div class="info">
                                	    <span class="date  float_r">2012-11-06</span>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a></h3>
@@ -115,7 +117,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                             <div class="clear"></div>
                           </li>
                           <li class="clearfix">
-                            	<a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a>
+                            	<div class="pic"><a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a></div>
                                 <div class="info">
                                	    <span class="date  float_r">2012-11-06</span>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a></h3>
@@ -127,7 +129,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                             <div class="clear"></div>
                           </li>
                           <li class="clearfix">
-                            	<a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a>
+                            	<div class="pic"><a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a></div>
                                 <div class="info">
                                	    <span class="date  float_r">2012-11-06</span>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a></h3>
@@ -139,7 +141,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                             <div class="clear"></div>
                           </li>
                           <li class="clearfix">
-                            	<a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
+                            	<div class="pic"><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></div>
                                 <div class="info">
                                	    <span class="date  float_r">2012-11-06</span>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a></h3>
