--- a/public/template/lightbox_color.html
+++ b/public/template/lightbox_color.html
@@ -44,56 +44,65 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         <div class="fancybox-outer" style="width: auto; height: auto;">
             <div class="fancybox-inner">
             <div style="" id="comment_form" class="notes_feature">
-                <h3 class="title">请选择香味特征</h3>
+                <h3 class="title">请选择颜色</h3>
                 <div class="">
                 	<div class="left">
-                    	<div class="search">
-                        	<div class="space">
-                            <input type="image" class="btn_feature_search" src="images/icon/search_gray.gif" />
-                            <input name="" type="text" value="" class="main" placeholder="search" />
-                            </div>
-                        </div>
-                      <ul class="feature_catalog">
-                        	<li><a href="#">青草类</a></li>
-                            <li><a href="#">草药类</a></li>
-                            <li><a href="#">蔬菜</a></li>
-                            <li><a href="#">甜香料</a></li>
-                            <li><a href="#">强烈的香料</a></li>
-                            <li class="current"><a href="#">酵母自溶解</a></li>
-                            <li><a href="#">乳制品/乳酸发酵</a></li>
-                            <li><a href="#">木桶系</a></li>
-                            <li><a href="#">坚果</a></li>
-                            <li><a href="#">热带水果</a></li>
-                            <li><a href="#">红色水果</a></li>
-                            <li><a href="#">黑色水果</a></li>
-                            <li><a href="#">干果</a></li>
-                            <li><a href="#">干果</a></li>
+                      <ul class="color_catalog">
+                        	<li class="current"><a href="#">红葡萄酒</a></li>
+                            <li><a href="#">白葡萄酒</a></li>
+                            <li><a href="#">桃红葡萄酒</a></li>
                         </ul>
                     </div>
-                    <div class="feature">
-                    	<ul class="feature_list">
+                    <div class="color">
+                    	<ul class="color_list">
                         	<li>
-                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/CitrusFruit/CitrusFruit_Lime.png" width="128" height="128" /></a></p>
-                                <p class="name">柠檬</p>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Purple-1.png" width="128" height="128" /></a></p>
+                                <p class="name">浅紫色</p>
+                          </li>
+                            <li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Purple-2.png" width="128" height="128" /></a></p>
+                                <p class="name">紫色</p>
                             </li>
                             <li>
-                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/CitrusFruit/CitrusFruit_Lemon.png" width="128" height="128" /></a></p>
-                                <p class="name">柠檬</p>
-                          </li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Purple-3.png" width="128" height="128" /></a></p>
+                                <p class="name">深紫色</p>
                             <li>
-                            	<p class="pic"><a href="#"><img src="images/nose/BlackFruit/BlackFruit_Blueberry.png" width="128" height="128" /></a></p>
-                                <p class="name">柠檬</p>
-                          </li>
-                            <li>
-                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/Kernel/Kernel_Marzipan.png" width="128" height="128" /></a></p>
-                                <p class="name">柠檬</p>
-                          </li>
-                            <li>
-                            	<p class="pic"><a href="#"><img src="images/nose/CitrusFruit/CitrusFruit_Lime.png" width="128" height="128" /></a></p>
-                                <p class="name">柠檬</p>
+                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/color/Red-Ruby-1.png" width="128" height="128" /></a></p>
+                                <p class="name">浅宝石色</p>
                             </li>
-                            
-                        </ul>
+                            <li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Ruby-2.png" width="128" height="128" /></a></p>
+                                <p class="name">宝石色</p>
+                          </li>
+                            <li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Ruby-3.png" width="128" height="128" /></a></p>
+                                <p class="name">深宝石色</p>
+                          </li>
+							<li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Garnet-1.png" width="128" height="128" /></a></p>
+                                <p class="name">浅石榴色</p>
+                            </li>
+                            <li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Garnet-2.png" width="128" height="128" /></a></p>
+                                <p class="name">石榴色</p>
+                          </li>
+                            <li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Garnet-3.png" width="128" height="128" /></a></p>
+                                <p class="name">深石榴色</p>
+                          </li>
+                          <li>
+                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/color/Red-Tawny-1.png" width="128" height="128" /></a></p>
+                                <p class="name">浅茶色</p>
+                          </li>
+                            <li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Tawny-2.png" width="128" height="128" /></a></p>
+                                <p class="name">茶色</p>
+                          </li>
+                            <li>
+                            	<p class="pic"><a href="#"><img src="images/color/Red-Tawny-3.png" width="128" height="128" /></a></p>
+                                <p class="name">深茶色</p>
+                          </li>
+                      </ul>
                     </div>
                     <div class="clear"></div>
               </div>
