--- a/public/template/myhp_collect_list.html
+++ b/public/template/myhp_collect_list.html
@@ -57,10 +57,10 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     粉丝</a></li>
                     <li><a href="myhp_wine_list.html">12<br/>
                     关注</a></li>
-                    <li class="current"><a href="myhp_comment_list.html">12<br/>评论</a></li>
+                    <li><a href="myhp_comment_list.html">12<br/>评论</a></li>
                     <li><a href="album.html">12<br/>相册</a></li>
                     <li><a href="myevent.html">12<br/>活动</a></li>
-                    <li><a href="myhp_collect_list.html">12<br/>收藏</a></li>
+                    <li class="current"><a href="myhp_collect_list.html">12<br/>收藏</a></li>
                 </ul>
                 <div class="clear"></div>
             </div>
@@ -70,12 +70,11 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
           	<div class="left">
             	<div class="tabs3">
                   <ul>
-                    <li><a href="myhp_comment_list.html">评论</a></li>
-                    <li class="current"><a href="myhp_notes_list.html">品酒辞</a></li>
+                    <li class="current"><a href="myhp_notes_list.html">收藏的品酒辞</a></li>
                   </ul>
                 </div>
             	<div class="title_btn">
-                  <h1>品酒辞 <span class="font12 more">(共21篇...)</span></h1>
+                  <h1>收藏的品酒辞 <span class="font12 more">(共21篇...)</span></h1>
                 </div>
                 <ul class="notes_list">
                         	<li class="clearfix">
@@ -84,7 +83,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <a href="wine_profile.html"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
                                 </div>
                                 <div class="info">
-                               	    <a href="#" class="icon_cancle float_r" title="删除品酒辞"></a><a href="#" class="icon_public float_r mr5" title="发布品酒辞"></a><a href="#" class="icon_edit2 float_r mr5" title="修改品酒辞"></a>
+                               	    <a href="#" class="icon_cancle float_r" title="取消收藏"></a>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a><span class="date"> 2012-11-06</span></h3>
                                     <h3 class="en"><a href="wine_profile.html">PORTER MILL STATION Cabernet Sauvignon</a></h3>
                                     <p class="star"><span class="star_s2_h"></span></p>
@@ -98,7 +97,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a>
                                 </div>
                                 <div class="info">
-                                    <a href="#" class="icon_cancle float_r" title="删除品酒辞"></a><a href="#" class="icon_edit2 float_r mr5" title="修改品酒辞"></a>
+                                    <a href="#" class="icon_cancle float_r" title="取消收藏"></a>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a><span class="date">2012-11-06</span></h3>
                                     <h3 class="en"><a href="wine_profile.html">PORTER MILL STATION Cabernet Sauvignon</a></h3>
                                     <p class="star"><span class="star_s2_h"></span></p>
@@ -113,7 +112,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a>
                                 </div>
                                 <div class="info">
-                               	    <a href="#" class="icon_cancle float_r" title="删除品酒辞"></a><a href="#" class="icon_edit2 float_r mr5" title="修改品酒辞"></a>
+                               	    <a href="#" class="icon_cancle float_r" title="取消收藏"></a>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a><span class="date">2012-11-06</span></h3>
                                     <h3 class="en"><a href="wine_profile.html">PORTER MILL STATION Cabernet Sauvignon</a></h3>
                                     <p class="star"><span class="star_s2_h"></span></p>
@@ -127,7 +126,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a>
                                 </div>
                                 <div class="info">
-                               	    <a href="#" class="icon_cancle float_r" title="删除品酒辞"></a><a href="#" class="icon_edit2 float_r mr5" title="修改品酒辞"></a>
+                               	    <a href="#" class="icon_cancle float_r" title="取消收藏"></a>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a><span class="date">2012-11-06</span></h3>
                                     <h3 class="en"><a href="wine_profile.html">PORTER MILL STATION Cabernet Sauvignon</a></h3>
                                     <p class="star"><span class="star_s2_h"></span></p>
@@ -141,7 +140,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a>
                                 </div>
                                 <div class="info">
-                               	    <a href="#" class="icon_cancle float_r" title="删除品酒辞"></a><a href="#" class="icon_edit2 float_r mr5" title="修改品酒辞"></a>
+                               	    <a href="#" class="icon_cancle float_r" title="取消收藏"></a>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a><span class="date">2012-11-06</span></h3>
                                     <h3 class="en"><a href="wine_profile.html">PORTER MILL STATION Cabernet Sauvignon</a></h3>
                                     <p class="star"><span class="star_s2_h"></span></p>
@@ -155,7 +154,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                                     <a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
                                 </div>
                                 <div class="info">
-                               	    <a href="#" class="icon_cancle float_r" title="删除品酒辞"></a><a href="#" class="icon_edit2 float_r mr5" title="修改品酒辞"></a>
+                               	    <a href="#" class="icon_cancle float_r" title="取消收藏"></a>
                                     <h3 class="zh"><a href="wine_profile.html">2001 波特米勒站赤霞珠干红葡萄酒</a><span class="date">2012-11-06</span></h3>
                                     <h3 class="en"><a href="wine_profile.html">PORTER MILL STATION Cabernet Sauvignon</a></h3>
                                     <p class="star"><span class="star_s2_h"></span></p>
