--- a/public/template/stylesheets/hp.css
+++ b/public/template/stylesheets/hp.css
@@ -58,6 +58,7 @@
 #hp .right .sidewine .info h3.zh {font-size:12px;}
 #hp .right .sidewine .info h3.en a {font-size:12px;font-weight:normal;color:#999;}
 #hp .right .sidewine .info h3.en a:hover {color:#999;text-decoration:none;}
+#hp .right .sidewine .info p.star {margin:0 0 5px 0;}
 
 
 /*-------------album style----------------*/
