--- a/public/template/stylesheets/notes.css
+++ b/public/template/stylesheets/notes.css
@@ -43,3 +43,13 @@ dd.info h3.en a {font-weight:normal;color:#666;}
 .notes_list .left {width:100px;float:left;margin-right:20px;text-align:center;}
 .notes_list a img{margin:0 0 10px 0;}
 .notes_list .right {width:470px;float:left;}
+
+.notes #manage {position:absolute;left:20px;top:13px;}
+.notes #manage div {position:absolute; visibility: hidden;left:0px;background-color:#f8f8f8;border:1px solid #ddd;border-bottom:none;width:120px;}
+.notes #manage div a {display:block;position:relative;padding: 5px 5px 5px 33px;border-bottom:1px solid #ddd;}
+.notes #manage div a:hover {background-color:#eee;text-decoration:none;}
+.notes #manage div a.icon_edit2 {background-position:-51px 8px;}
+.notes #manage div a.icon_cancle {background-position:-51px -31px;}
+.notes #manage div a.icon_public {background-position:8px 6px;}
+.notes #manage div a.icon_member {background-position:10px 7px;}
+.notes #manage div a.icon_members {background-position:10px 7px;}
