notes photo upload page

--- a/public/template/add_notes_s1.html
+++ b/public/template/add_notes_s1.html
@@ -51,12 +51,10 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <form id="form" name="form" method="post" action="#">
             <table class="form" width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <th width="90" valign="top">图片</th>
+                <th width="90" valign="top">照片</th>
                 <td>
-               	  <p>从电脑上传（支持JPG、GIF、PNG图片格式，且小于5M）</p>
-                  <p class="mt20"><input name="text" type="text" class="text name mr5" value="" /><a href="#" class="btn_gray"><span>选择照片</span></a></p>
-                   <p class="mt20"><img src="images/common/userpic_upload.jpg" width="280" height="280" /></p>
-                   <p class="mt20"><a href="album_photo_upload3.html" class="btn_gray mr5"><span>保存</span></a><a href="album_photo_upload3.html" class="btn_gray "><span>取消</span></a></p>
+                   <p><img src="images/common/userpic_upload.jpg" width="280" height="280" /></p>
+                   <p class="mt20"><a href="lightbox_addnotesphoto.html" class="btn_gray mr5"><span>修改照片</span></a></p>
                 </td>
               </tr>
               <tr>
