--- a/public/template/notes_detail.html
+++ b/public/template/notes_detail.html
@@ -231,7 +231,7 @@ document.onclick = mclose;
                 </div>
             </div>
             <div class="right">
-      	<div class="sidebox"><img src="images/common/notes_ad.jpg" width="250" height="197" /></div>
+      	<div class="sidebox"><a href="https://itunes.apple.com/cn/app/iwine-notes/id572825000?ls=1&amp;mt=8&quot;" target="_blank"><img src="images/common/notes_ad.jpg" alt="iWine Notes" width="250" height="207" /></a></div>
         <div class="sidebox"><a href="#"><img src="images/common/btn_add_notes.jpg" alt="我也喝过，去写品酒辞！" width="250" height="50" /></a></div>
       	<div class="sidebox">
           <div class="title">
