--- a/public/template/stylesheets/add.css
+++ b/public/template/stylesheets/add.css
@@ -44,3 +44,4 @@ ul.danning_list {width:120px;float:left;}
 ul.danning_list li {margin:0 20px 5px 0;}
 ul.danning_list span {background:url(../images/bg/bg_f.gif) no-repeat left top;width:89px;height:32px;text-align:center;padding:5px 0 0 0;line-height:27px;display:block;font-weight:bold;}
 .f1, .f2, .f3, .f4 {margin: 0 0 0 5px;}
+ul#stars li{float:left;display:inline;}
