--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -216,7 +216,7 @@
 </div>
 <div class="right">
   <div class="sidebox">
-    <%= image_tag 'common/notes_ad.jpg', :size => '250x197' %>
+    <%= link_to (image_tag 'common/notes_ad.jpg', :size => '250x197'), 'http://www.iwine.com/notes/app/' %>
   </div>
   <!--
   <div class="sidebox">
