--- a/app/views/users/share/_user_followings.html.erb
+++ b/app/views/users/share/_user_followings.html.erb
@@ -24,9 +24,13 @@
             <% end %>
           <% else %>
             <% if current_user != user %>
+            <% if current_user.is_following user.id %>
+              <span>已被关注</span>
+            <% else%>
               <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
                 <span>加关注</span>
               <% end %>
+            <% end%>
             <% end %>
           <% end %>
         </div>
