--- a/public/template/lightbox_addnotesphoto.html
+++ b/public/template/lightbox_addnotesphoto.html
@@ -47,17 +47,18 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <h3 class="title"> 上传照片 </h3>
                 <form novalidate="novalidate" method="post" id="new_wine_comment" data-validate="true" class="new_wine_comment" action="/wines/254/comments" accept-charset="UTF-8">
               <div class="comment_box">
-             <p>从电脑上传（支持JPG、GIF、PNG图片格式，且小于5M）</p>
+              <p>从电脑上传（支持JPG、GIF、PNG图片格式，且小于5M）</p>
                   <p class="mt20"><input name="text" type="text" class="text name mr5" value="" /><a href="#" class="btn_gray"><span>选择照片</span></a></p>
                    <p class="mt20"><img src="images/common/userpic_upload.jpg" width="280" height="280" /></p>
                    <p class="mt20"><a href="album_photo_upload3.html" class="btn_gray mr5"><span>保存</span></a><a href="album_photo_upload3.html" class="btn_gray "><span>取消</span></a></p>
                 </div>
             </form>
-        <script id="star_item" type="text/template">
+          <script id="star_item" type="text/template">
           &lt;img alt="Star_gray" height="14" src="/assets/base/star_gray.jpg" width="15" /&gt;
-         </script></div></div></div>
+          </script>
+          </div>
+          </div>
+          </div>
          <div class="fancybox-item fancybox-close" title="Close"></div></div>
-         
-         
 </body>
 </html>
