--- a/public/template/lightbox_feature.html
+++ b/public/template/lightbox_feature.html
@@ -73,29 +73,32 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     <div class="feature">
                     	<ul class="feature_list">
                         	<li>
-                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/CitrusFruit/CitrusFruit_Lime.png" width="128" height="128" /></a></p>
+                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/CitrusFruit_Lime.png" width="128" height="128" /></a></p>
                                 <p class="name">柠檬</p>
                             </li>
                             <li>
-                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/CitrusFruit/CitrusFruit_Lemon.png" width="128" height="128" /></a></p>
+                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/CitrusFruit_Lemon.png" width="128" height="128" /></a></p>
                                 <p class="name">柠檬</p>
                           </li>
                             <li>
-                            	<p class="pic"><a href="#"><img src="images/nose/BlackFruit/BlackFruit_Blueberry.png" width="128" height="128" /></a></p>
+                            	<p class="pic"><a href="#"><img src="images/nose/BlackFruit_Blueberry.png" width="128" height="128" /></a></p>
                                 <p class="name">柠檬</p>
                           </li>
                             <li>
-                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/Kernel/Kernel_Marzipan.png" width="128" height="128" /></a></p>
+                            	<p class="pic"><span class="rg"></span><a href="#"><img src="images/nose/Kernel_Marzipan.png" width="128" height="128" /></a></p>
                                 <p class="name">柠檬</p>
                           </li>
                             <li>
-                            	<p class="pic"><a href="#"><img src="images/nose/CitrusFruit/CitrusFruit_Lime.png" width="128" height="128" /></a></p>
+                            	<p class="pic"><a href="#"><img src="images/nose/CitrusFruit_Lime.png" width="128" height="128" /></a></p>
                                 <p class="name">柠檬</p>
                             </li>
                             
                         </ul>
                     </div>
                     <div class="clear"></div>
+              </div>
+              <div class="share relative clearfix align_c">
+                <a href="#" class="btn_gray_b"><span>保存</span></a>
               </div>
         </div></div></div>
          <div class="fancybox-item fancybox-close" title="Close"></div></div>
